# apertium-gle

./: .gitattributes  Makefile.am  README  apertium-gle.gle.dix  apertium-gle.pc.in  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
